--- a/animalLifeSimulation/build.gradle
+++ b/animalLifeSimulation/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    )
 }
 
 java {
