--- a/animalLifeSimulation/build.gradle
+++ b/animalLifeSimulation/build.gradle
@@ -9,9 +9,16 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    junitPlatformVersion = '1.9.1'
+    junitJupiterVersion = '5.9.1'
+    assertJVersion = '3.24.2'
+    jqwikVersion = '1.8.2'
+}
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation "net.jqwik:jqwik:${jqwikVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
     testImplementation(
             'org.junit.jupiter:junit-jupiter-params:5.8.2'
     )
